favorite modifications and some bug fixes

--- a/folioreader/res/values/strings.xml
+++ b/folioreader/res/values/strings.xml
@@ -21,6 +21,7 @@
 
     <string name="copy">نسخ</string>
     <string name="share">مشاركة</string>
+    <string name="addToFavorite">إضافة للمفضلة</string>
     <string name="define">تعريف</string>
     <string name="highlight">تظليل</string>
 
